--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,13 @@ jobs:
 
       - name: Run build
         run: 'npm run build'
+
+      - name: Run pack
+        run: 'npm run pack'
+
+      - name: Archive Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.sha }}
+          path: |
+            ${{ github.workspace }}/packages/**/*.tgz
