--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,11 @@ jobs:
         run: 'npm run build'
 
       - name: Run pack
-        run: 'npm run pack'
+        run: 'npm pack'
 
       - name: Archive Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.sha }}
           path: |
-            ${{ github.workspace }}/packages/**/*.tgz
+            ${{ github.workspace }}/**/*.tgz
