--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ dist/
 *.tsbuildinfo
 *.tgz
 
+# Bundled Sentry SDK
+nodes/Sentry/sentry-sdk.bundle.js
+nodes/Sentry/sentry-sdk.bundle.js.map
+
 # IDE and Editor files
 .vscode/*
 !.vscode/extensions.json
