--- a/package.json
+++ b/package.json
@@ -19,22 +19,20 @@
         "access": "public"
     },
     "scripts": {
-        "build": "npm run bundle && n8n-node build && npm run copy-bundle",
-        "bundle": "vite build",
-        "copy-bundle": "cp nodes/Sentry/sentry-sdk.bundle.* dist/nodes/Sentry/",
-        "build:watch": "npm run bundle && tsc --watch",
-        "dev": "n8n-node dev",
-        "lint": "n8n-node lint",
-        "lint:fix": "n8n-node lint --fix",
-        "release": "n8n-node release",
-        "prepublishOnly": "n8n-node prerelease"
-    },
+		"build": "n8n-node build",
+		"build:watch": "tsc --watch",
+		"dev": "n8n-node dev",
+		"lint": "n8n-node lint",
+		"lint:fix": "n8n-node lint --fix",
+		"release": "n8n-node release",
+		"prepublishOnly": "n8n-node prerelease"
+	},
     "files": [
         "dist"
     ],
     "n8n": {
         "n8nNodesApiVersion": 1,
-        "strict": false,
+        "strict": true,
         "credentials": [],
         "nodes": [
             "dist/nodes/Sentry/Sentry.node.js"
@@ -42,14 +40,14 @@
     },
     "devDependencies": {
         "@n8n/node-cli": "*",
-        "@sentry/node": "^10.21.0",
         "eslint": "9.32.0",
         "prettier": "3.6.2",
         "release-it": "^19.0.4",
-        "typescript": "5.9.2",
-        "vite": "^7.0.0"
+        "typescript": "5.9.2"
     },
-    "dependencies": {},
+    "dependencies": {
+        "@sentry/node": "^10.21.0"
+    },
     "peerDependencies": {
         "n8n-workflow": "*"
     }
